fix sidebar overflow issue

--- a/src/components/Sidebar/Navigation/Navigation.module.scss
+++ b/src/components/Sidebar/Navigation/Navigation.module.scss
@@ -1,9 +1,12 @@
 .nav-menu {
   ul {
     li {
+      margin-bottom: 20px;
+
       a{
         color: #FFFFFF;
-        
+        font-size: 14px;
+
         svg{
           width: 12px;
           height: auto;
